--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "devDependencies": {
+    "browser-sync": "^2.29.1",
     "gulp": "^4.0.2",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.60.0",
-    "browser-sync": "^2.29.1"
+    "lorem-ipsum": "^2.0.8",
+    "sass": "^1.60.0"
   }
 }
